Update audiobook creation features and version
- Bump version to 0.0.3.
- Change output path for generated audiobooks to a dedicated 'output' directory.
- Implement chapter splitting functionality, allowing each chapter to be saved as a separate file.
- Add MP3 conversion option for generated audio files using ffmpeg.
- Enhance command-line interface with new arguments for chapter splitting and MP3 conversion.
- Update README.md to reflect new features and usage instructions.
- Modify requirements.txt to include ffmpeg as an optional dependency for MP3 conversion.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ torchaudio>=0.13.0
 
 # Web interface dependencies
 gradio>=4.0.0
+
+# Optional: MP3 conversion (requires ffmpeg system package)
+# ffmpeg-python>=0.2.0
